src/parser/snapshots/rbx_rsml__parser__tests__unary_minus_in_expression.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                TokenIdentifier(
                    "Val",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            MathOperation {
                left: UnaryMinus {
                    operator: Node {
                        token: SpannedToken(
                            7,
                            OpSub,
                            8,
                        ),
                        leading_trivia: None,
                    },
                    operand: Node {
                        node: Node {
                            token: SpannedToken(
                                8,
                                Number(
                                    "10",
                                ),
                                10,
                            ),
                            leading_trivia: None,
                        },
                    },
                },
                operators: [
                    Node {
                        token: SpannedToken(
                            11,
                            OpAdd,
                            12,
                        ),
                        leading_trivia: None,
                    },
                ],
                right: Some(
                    Node {
                        node: Node {
                            token: SpannedToken(
                                13,
                                Number(
                                    "20",
                                ),
                                15,
                            ),
                            leading_trivia: None,
                        },
                    },
                ),
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    15,
                    SemiColon,
                    16,
                ),
                leading_trivia: None,
            },
        ),
    },
]
