src/parser/snapshots/rbx_rsml__parser__tests__value_color_brick.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                Identifier(
                    "Color",
                ),
                5,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    6,
                    Equals,
                    7,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        8,
                        ColorBrick(
                            "bc:red",
                        ),
                        14,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    14,
                    SemiColon,
                    15,
                ),
                leading_trivia: None,
            },
        ),
    },
]
